clusters/hetzner-dr/apps/cloudnova-books/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudnova-books
  namespace: cloudnova-books
spec:
  type: ClusterIP

  selector:
    app: cloudnova-books

  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
