clusters/hetzner-dr/apps/cloudnova-books/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cloudnova-books
  namespace: cloudnova-books
spec:
  parentRefs:
    - name: public-gateway
      namespace: gateway-infra
      sectionName: http

  hostnames:
    - books.cloudnova.tech

  rules:
    - backendRefs:
        - name: cloudnova-books
          port: 80
